--- a/papers/retrosynthesis/article.tex
+++ b/papers/retrosynthesis/article.tex
@@ -48,7 +48,7 @@
 \begin{abstract}
 We describe a Transformer model for a retrosynthetic reaction prediction task. 
 The model is trained on 45\,033 experimental reaction examples extracted 
-from USA patents. It can successfully predicts the reactants set for 
+from USA patents. It can successfully predict the reactants set for 
 42.7\% of cases on the external test set. During the training procedure, we applied 
 different learning rate schedules and snapshot learning. These techniques can prevent 
 overfitting and thus can be a reason to get rid of internal validation dataset that 
