for ICAN conf uncomment commands to make header and footer empty.

--- a/papers/retrosynthesis/article.tex
+++ b/papers/retrosynthesis/article.tex
@@ -18,7 +18,6 @@
 \usepackage{wrapfig}
 
 \title{A Transformer Model for Retrosynthesis}
-\date{April 5, 2019}	
 
 \author{
   Pavel Karpov\thanks{Helmholtz Zentrum M{\"u}nchen -- Research Center for Environmental Health (GmbH), Institute of Structural Biology, Ingolst{\"a}dter Landstra{\ss}e 1, D-85764 Neuherberg, Germany, \url{https://www.helmholtz-muenchen.de/stb/index.html}}\\
@@ -41,6 +40,11 @@
   Germany, Munich \\ 
   \texttt{itetko@bigchem.de} \\
 }
+
+%\rhead{}
+%\chead{}
+%\cfoot{}
+%\renewcommand{\headrulewidth}{0.0pt}
 
 \begin{document}
 \maketitle
