check links to final models

--- a/papers/retrosynthesis/article.tex
+++ b/papers/retrosynthesis/article.tex
@@ -288,7 +288,7 @@ In this section we report all characteristics of repetitive runs of all models b
   \caption{Learning curves and rate schedule for T1 model. Losses for training and validation datasets on the left, usual learning rate schedule on the right.}
   \label{fig:t11}
 \end{figure}
-
+\vspace{-0.5cm}
 \begin{table}[h!]
 \caption{Parameters of T11 run.}
   \centering
@@ -319,11 +319,11 @@ In this section we report all characteristics of repetitive runs of all models b
 \end{table} 
 
 
-\url{https://github.com/bigchem/retrosynthesis/papers/retrosynthesis/models/t1-1-early.h5}
+\url{https://github.com/bigchem/retrosynthesis/tree/master/papers/retrosynthesis/models/t1-1-early.h5}
 
-\url{https://github.com/bigchem/retrosynthesis/papers/retrosynthesis/models/t1-1-last.h5}
+\url{https://github.com/bigchem/retrosynthesis/tree/master/papers/retrosynthesis/models/t1-1-last.h5}
 
-\url{https://github.com/bigchem/retrosynthesis/papers/retrosynthesis/models/t1-1-avg.h5}
+\url{https://github.com/bigchem/retrosynthesis/tree/master/papers/retrosynthesis/models/t1-1-avg.h5}
 
 
 \newpage
@@ -366,11 +366,11 @@ In this section we report all characteristics of repetitive runs of all models b
 
 \end{table} 
 
-\url{https://github.com/bigchem/retrosynthesis/papers/retrosynthesis/models/t1-2-early.h5}
+\url{https://github.com/bigchem/retrosynthesis/tree/master/papers/retrosynthesis/models/t1-2-early.h5}
 
-\url{https://github.com/bigchem/retrosynthesis/papers/retrosynthesis/models/t1-2-last.h5}
+\url{https://github.com/bigchem/retrosynthesis/tree/master/papers/retrosynthesis/models/t1-2-last.h5}
 
-\url{https://github.com/bigchem/retrosynthesis/papers/retrosynthesis/models/t1-2-avg.h5}
+\url{https://github.com/bigchem/retrosynthesis/tree/master/papers/retrosynthesis/models/t1-2-avg.h5}
 
 \newpage
 
@@ -412,11 +412,11 @@ In this section we report all characteristics of repetitive runs of all models b
 
 \end{table} 
 
-\url{https://github.com/bigchem/retrosynthesis/papers/retrosynthesis/models/t1-3-early.h5}
+\url{https://github.com/bigchem/retrosynthesis/tree/master/papers/retrosynthesis/models/t1-3-early.h5}
 
-\url{https://github.com/bigchem/retrosynthesis/papers/retrosynthesis/models/t1-3-last.h5}
+\url{https://github.com/bigchem/retrosynthesis/tree/master/papers/retrosynthesis/models/t1-3-last.h5}
 
-\url{https://github.com/bigchem/retrosynthesis/papers/retrosynthesis/models/t1-3-avg.h5}
+\url{https://github.com/bigchem/retrosynthesis/tree/master/papers/retrosynthesis/models/t1-3-avg.h5}
 
 \newpage
 \subsection{Model 2}
@@ -452,9 +452,9 @@ In this section we report all characteristics of repetitive runs of all models b
 
 \end{table} 
 
-\url{https://github.com/bigchem/retrosynthesis/papers/retrosynthesis/models/t2-1-last.h5}
+\url{https://github.com/bigchem/retrosynthesis/tree/master/papers/retrosynthesis/models/t2-1-last.h5}
 
-\url{https://github.com/bigchem/retrosynthesis/papers/retrosynthesis/models/t2-1-avg.h5}
+\url{https://github.com/bigchem/retrosynthesis/tree/master/papers/retrosynthesis/models/t2-1-avg.h5}
 
 \newpage
  \subsubsection{Model 2 (run-2)}
@@ -489,9 +489,9 @@ In this section we report all characteristics of repetitive runs of all models b
 
 \end{table} 
 
-\url{https://github.com/bigchem/retrosynthesis/papers/retrosynthesis/models/t2-2-last.h5}
+\url{https://github.com/bigchem/retrosynthesis/tree/master/papers/retrosynthesis/models/t2-2-last.h5}
 
-\url{https://github.com/bigchem/retrosynthesis/papers/retrosynthesis/models/t2-2-avg.h5}
+\url{https://github.com/bigchem/retrosynthesis/tree/master/papers/retrosynthesis/models/t2-2-avg.h5}
 
 \newpage
  \subsubsection{Model 2 (run-3)}
@@ -526,9 +526,9 @@ In this section we report all characteristics of repetitive runs of all models b
 
 \end{table} 
 
-\url{https://github.com/bigchem/retrosynthesis/papers/retrosynthesis/models/t2-3-last.h5}
+\url{https://github.com/bigchem/retrosynthesis/tree/master/papers/retrosynthesis/models/t2-3-last.h5}
 
-\url{https://github.com/bigchem/retrosynthesis/papers/retrosynthesis/models/t2-3-avg.h5}
+\url{https://github.com/bigchem/retrosynthesis/tree/master/papers/retrosynthesis/models/t2-3-avg.h5}
  
  \newpage
 
@@ -576,7 +576,7 @@ In this section we report all characteristics of repetitive runs of all models b
 
 Model with weights averaging 6-7-8-9-10:
 
-\url{https://github.com/bigchem/retrosynthesis/papers/retrosynthesis/models/t3-1.h5}
+\url{https://github.com/bigchem/retrosynthesis/tree/master/papers/retrosynthesis/models/t3-1.h5}
 
 \newpage
  
@@ -622,7 +622,7 @@ Model with weights averaging 6-7-8-9-10:
 
 Model with weights averaging 6-7-8-9-10:
 
-\url{https://github.com/bigchem/retrosynthesis/papers/retrosynthesis/models/t3-2.h5}
+\url{https://github.com/bigchem/retrosynthesis/tree/master/papers/retrosynthesis/models/t3-2.h5}
 \newpage
 
 
@@ -668,7 +668,7 @@ Model with weights averaging 6-7-8-9-10:
 
 Model with weights averaging 6-7-8-9-10:
 
-\url{https://github.com/bigchem/retrosynthesis/papers/retrosynthesis/models/t3-3.h5}
+\url{https://github.com/bigchem/retrosynthesis/tree/master/papers/retrosynthesis/models/t3-3.h5}
 
 
 \end{document}
